Fix: return image in order list